--- a/Join/View/Chat/GroupMessageCell.xib
+++ b/Join/View/Chat/GroupMessageCell.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -66,7 +65,7 @@
                     <constraint firstAttribute="bottom" secondItem="mWp-9s-dfU" secondAttribute="bottom" constant="2" id="V03-jR-u80"/>
                     <constraint firstItem="mWp-9s-dfU" firstAttribute="leading" secondItem="ec5-82-YBq" secondAttribute="trailing" constant="2" id="ZCN-VE-qLo"/>
                     <constraint firstItem="ec5-82-YBq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="fqz-gj-XgA"/>
-                    <constraint firstItem="ec5-82-YBq" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.75" id="lj7-RW-rv6"/>
+                    <constraint firstItem="ec5-82-YBq" firstAttribute="width" relation="lessThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.75" id="lj7-RW-rv6"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -84,7 +83,7 @@
             <color red="0.0" green="0.22352941176470589" blue="0.38823529411764707" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Gray1">
-            <color red="0.24705882352941178" green="0.22745098039215686" blue="0.22745098039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.22745098039215686" green="0.22745098039215686" blue="0.22745098039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Gray3">
             <color red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
