--- a/Join/View/Chat/MyMessageCell.xib
+++ b/Join/View/Chat/MyMessageCell.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -19,7 +18,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="C37-jr-2EC">
-                        <rect key="frame" x="116" y="2" width="192" height="56"/>
+                        <rect key="frame" x="116" y="2" width="192" height="46"/>
                         <color key="backgroundColor" name="Blue3"/>
                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                         <color key="textColor" name="White"/>
@@ -27,19 +26,19 @@
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="24:59" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eqa-EQ-Opx">
-                        <rect key="frame" x="80" y="43.5" width="34" height="14.5"/>
+                        <rect key="frame" x="80" y="33.5" width="34" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" name="Gray3"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="eqa-EQ-Opx" secondAttribute="bottom" constant="2" id="Jzx-TH-Y3C"/>
                     <constraint firstItem="C37-jr-2EC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="PKa-Kb-abZ"/>
                     <constraint firstItem="C37-jr-2EC" firstAttribute="width" relation="lessThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.6" id="QyM-p9-G3y"/>
-                    <constraint firstAttribute="bottom" secondItem="C37-jr-2EC" secondAttribute="bottom" constant="2" id="WEB-Uf-f6A"/>
+                    <constraint firstAttribute="bottom" secondItem="C37-jr-2EC" secondAttribute="bottom" constant="12" id="WEB-Uf-f6A"/>
                     <constraint firstItem="C37-jr-2EC" firstAttribute="leading" secondItem="eqa-EQ-Opx" secondAttribute="trailing" constant="4" id="nrN-ul-8KV"/>
                     <constraint firstAttribute="trailing" secondItem="C37-jr-2EC" secondAttribute="trailing" constant="12" id="rkU-J4-NSE"/>
+                    <constraint firstItem="eqa-EQ-Opx" firstAttribute="bottom" secondItem="C37-jr-2EC" secondAttribute="bottom" id="tQH-uv-x9M"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
