--- a/Join/View/Personal/Profile/Edit/Portfolio/WorkRecordCell.xib
+++ b/Join/View/Personal/Profile/Edit/Portfolio/WorkRecordCell.xib
@@ -27,6 +27,9 @@
                         <color key="tintColor" name="Red"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal" image="trash" catalog="system"/>
+                        <connections>
+                            <action selector="deleteRecord:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="jyQ-pY-QZt"/>
+                        </connections>
                     </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XEn-am-pjQ">
                         <rect key="frame" x="26" y="9" width="240" height="182"/>
